--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "babel-runtime": "^6.26.0",
+    "faker": "^4.1.0",
     "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.20.1",
+    "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
