--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "accounting": "^0.4.1",
     "babel-runtime": "^6.26.0",
     "faker": "^4.1.0",
+    "history": "^4.7.2",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.20.1",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
